# backstage

./: .gitignore  Cargo.toml  NOTICE  README.md  tree.dot
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report-for-backstage.md  feature-request-for-backstage.md
backstage-core/: Cargo.toml
backstage-core/examples/: actor_pool.rs  benchmark.rs  custom.rs  echo.rs  gauge.rs  hello_world.rs  hyper.rs  hyper_prefab.rs  rocket_prefab.rs  root.rs  two.rs  two_apps.rs  websocket_chatter.rs
backstage-core/src/: lib.rs
backstage-core/src/actor/: actor.rs  builder.rs  channel.rs  dependencies.rs  event_handle.rs  events.rs  id_pool.rs  launcher.rs  mod.rs  pool.rs  result.rs  runtime.rs  service.rs  shutdown_stream.rs  system.rs
backstage-core/src/actor/runtime/: basic_runtime.rs  full_runtime.rs  mod.rs  null_runtime.rs  scopes.rs  system_runtime.rs
backstage-core/src/config/: file.rs  history.rs  mod.rs  persist.rs  test.rs  types.rs  versioned.rs
backstage-core/src/core/: actor.rs  channel.rs  mod.rs  registry.rs  result.rs  rt.rs  service.rs  shutdown_stream.rs
backstage-core/src/newactor/: actor.rs  builder.rs  event_handle.rs  launcher.rs  mod.rs  result.rs  service.rs
backstage-core/src/prefab/: hyper.rs  mod.rs  one_for_one.rs  rocket.rs  websocket_server.rs
backstage-core/src/prefab/backserver/: mod.rs  server.rs
backstage-core/src/prefab/websocket/: mod.rs  websocket_listener.rs  websocket_receiver.rs  websocket_sender.rs
backstage-core/src/prefabs/: mod.rs  websocket.rs
backstage-core/src/runtime/: access.rs  data.rs  mod.rs  scopes.rs
backstage-core/tests/: actors.rs  runtime.rs  supervision.rs
backstage-macros/: Cargo.toml
backstage-macros/src/: lib.rs
examples/: Cargo.toml  hello_world.rs  linked_child.rs  no_children.rs  one_child.rs  resource_child.rs  two_child.rs
src/: lib.rs
src/core/: builder.rs  mod.rs  registry.rs
src/runtime/: launcher.rs  mod.rs
