[package]
name = "backstage"
version = "0.1.1"
authors = ["IOTA Stiftung"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://www.iota.org"
repository = "https://github.com/iotaledger/backstage"
description = "A framework for building data-driven distributed systems"
keywords = ["iota", "tangle", "chronicle", "framework", "backstage", "actor", "actor-model"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.5", features = ["sync", "time", "rt"] }
lazy_static = "1.4"
async-recursion = "0.3"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread", "signal"] }
env_logger = "0.8"
log = "0.4"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "two_apps"
path = "examples/two_apps.rs"