[package]
name = "backstage"
version = "0.1.1"
authors = ["IOTA Stiftung"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://www.iota.org"
repository = "https://github.com/iotaledger/backstage"
description = "A framework for building data-driven distributed systems"
keywords = ["iota", "distributed", "framework", "backstage", "actor"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.5", features = ["sync", "time", "rt"] }
lazy_static = "1.4"
async-recursion = "0.3"
log = "0.4"
dyn-clone = "1.0.4"
anyhow = "1.0"
anymap = "0.12.1"
env_logger = "0.8"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread", "signal"] }
env_logger = "0.8"
log = "0.4"

[[example]]
name = "no_children"
path = "examples/no_children.rs"

[[example]]
name = "one_child"
path = "examples/one_child.rs"

[[example]]
name = "two_child"
path = "examples/two_child.rs"

[[example]]
name = "resource_child"
path = "examples/resource_child.rs"


[[example]]
name = "linked_child"
path = "examples/linked_child.rs"
