[package]
name = "backstage"
version = "1.0.0"
authors = ["IOTA Stiftung"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://www.iota.org"
repository = "https://github.com/iotaledger/backstage"
description = "A framework for building data-driven distributed systems"
keywords = ["iota", "distributed", "framework", "backstage", "actor"]
exclude = [".github/**/*"]

[dependencies]
backstage-macros = { path = "../backstage-macros" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
async-recursion = "1.0"
futures = "0.3"
tokio = { version = "1.5", features = ["sync", "time", "rt"] }
tokio-stream = "0.1"
lazy_static = "1.4"
anyhow = "1.0"
anymap = "0.12"
thiserror = "1.0"
lru = "0.7"
num-traits = "0.2"
ptree = "0.4"
log = "0.4"
uuid = { version = "0.8", features = ["v4", "serde"] }
dyn-clone = "1.0"

rand = { version = "0.8", optional = true }
futures-util = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.17", optional = true }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread", "signal"] }
env_logger = "0.9"
log = "0.4"
url = "2.2"

[features]
default = ["prefabs", "rand_pool"]
prefabs = ["tokio/net", "futures-util", "tokio-tungstenite"]
rand_pool = ["rand"]