[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
backstage = {path = "../"}
tokio = { version = "1.5", features = ["macros", "rt-multi-thread", "signal"] }
futures = "0.3"
env_logger = "0.8"
log = "0.4"
async-trait = "0.1"
serde_json = "1.0"

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "two_apps"
path = "two_apps.rs"
